# Clinical-Guidelines-RAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/: .gitignore  app.py  models.py  rag_engine.py  requirements.txt
backend/chroma_db/: chroma.sqlite3
clinical_chatbot/: app.py  main.py  rag.py
clinical_chatbot/data/: policies.py
clinical_chatbot/static/css/: style.css
clinical_chatbot/templates/: index.html
frontend/: .env.example  requirements.txt  streamlit_app.py
