[tool.poetry]
name = "clinical-guidelines-rag"
version = "0.1.0"
description = "RAG-based Clinical Protocol Assistant using Gemini and Vector Search for hallucinations-free medical answers."
authors = ["Mohamed Fakhry <https://github.com/MohamedFakhry2007>"]
readme = "README.md"
packages = [{include = "clinical_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.1.0"}
python-dotenv = "^1.0.0"
google-generativeai = "^0.8.5"
scikit-learn = "^1.3.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "clinical_chatbot.main:main"